Вносит исправления подключения картинок

--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Седона — Главная страница</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -18,8 +18,9 @@
       <div class="page-header__wrapper">
         <a class="page-header__logo">
           <picture>
-            <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
-            <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
+            <source media="(min-width: 1200px)" srcset="/img/logo-sedona-desktop.svg">
+            <source media="(min-width: 768px)" srcset="/img/logo-sedona-tablet.svg">
+            <img class="page-header__logo-image" src="/img/logo-sedona-mobile.svg" width="102" height="83" alt="Седона">
           </picture>
         </a>
         <nav class="main-nav main-nav--closed main-nav--nojs">
@@ -33,10 +34,10 @@
                 <a>Главная</a>
               </li>
               <li class="site-list__item">
-                <a href="photo-and-video.html">Фото и видео</a>
+                <a href="/photo-and-video.html">Фото и видео</a>
               </li>
               <li class="site-list__item">
-                <a href="feedback.html">Форма отзыва</a>
+                <a href="/feedback.html">Форма отзыва</a>
               </li>
               <li class="site-list__item">
                 <a href="https://htmlacademy.ru">HTML Academy</a>
@@ -52,7 +53,7 @@
       <section class="page-cover page-cover--main-page">
         <div class="page-cover__wrapper page-cover__wrapper--main-page">
           <div class="page-cover__image page-cover__image--main-page">
-            <img class="page-cover__logo" src="img/text-sedona-index.svg" width="282" height="214" alt="SEDONA">
+            <img class="page-cover__logo" src="/img/text-sedona-index.svg" width="282" height="214" alt="SEDONA">
           </div>
           <h1 class="page-cover__title">
             Седона — небольшой городок в Аризоне, заслуживающий большего!
@@ -79,9 +80,9 @@
                   </p>
                 </div>
                 <picture class="features__image">
-                  <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg 1x, img/main-city-desktop@2x.jpg 2x">
-                  <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg 1x, img/main-city-tablet@2x.jpg 2x">
-                  <img src="img/main-city-mobile@1x.jpg" srcset="img/main-city-mobile@2x.jpg 2x" alt="Обычный городок">
+                  <source media="(min-width: 1200px)" srcset="/img/main-city-desktop@1x.jpg 1x, /img/main-city-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="/img/main-city-tablet@1x.jpg 1x, /img/main-city-tablet@2x.jpg 2x">
+                  <img src="/img/main-city-mobile@1x.jpg" srcset="/img/main-city-mobile@2x.jpg 2x" alt="Обычный городок">
                 </picture>
               </div>
               <ul class="features__container recommended-list">
@@ -117,9 +118,9 @@
                   </p>
                 </div>
                 <picture class="features__image">
-                  <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg 1x, img/main-bridge-desktop@2x.jpg 2x">
-                  <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg 1x, img/main-bridge-tablet@2x.jpg 2x">
-                  <img src="img/main-bridge-mobile@1x.jpg" srcset="img/main-bridge-mobile@2x.jpg 2x" width="320" height="260" alt="Мост Дьявола">
+                  <source media="(min-width: 1200px)" srcset="/img/main-bridge-desktop@1x.jpg 1x, /img/main-bridge-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="/img/main-bridge-tablet@1x.jpg 1x, /img/main-bridge-tablet@2x.jpg 2x">
+                  <img src="/img/main-bridge-mobile@1x.jpg" srcset="/img/main-bridge-mobile@2x.jpg 2x" width="320" height="260" alt="Мост Дьявола">
                 </picture>
               </div>
             </li>
@@ -170,9 +171,9 @@
         <div class="location__wrapper">
           <h2 class="visually-hidden">Расположение Седоны</h2>
           <picture>
-            <source media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.jpg 1x, img/bg-map-desktop@2x.jpg 2x">
-            <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.jpg 1x, img/bg-map-tablet@2x.jpg 2x">
-            <img class="location__map" src="img/bg-map-mobile@1x.jpg" srcset="img/bg-map-mobile@2x.jpg 2x" width="320" height="350" alt="Карта расположения города">
+            <source media="(min-width: 1200px)" srcset="/img/bg-map-desktop@1x.jpg 1x, /img/bg-map-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="/img/bg-map-tablet@1x.jpg 1x, /img/bg-map-tablet@2x.jpg 2x">
+            <img class="location__map" src="/img/bg-map-mobile@1x.jpg" srcset="/img/bg-map-mobile@2x.jpg 2x" width="320" height="350" alt="Карта расположения города">
           </picture>
         </div>
       </section>
@@ -186,7 +187,7 @@
           <li class="social__item">
             <a class="social__link" href="#">
 
-              <svg width="18" height="15">
+              <svg width="18" height="15" viewBox="0 0 18 15">
                 <path d="M11.6.2c1.7-.5 3.2.2 3.8 1.1l2.2-.7c0 .8-.5 1.5-.9 1.7.7.2 1.3-.5 1.3-.5-.2 1-1 1.7-1.6 2.1C16.1 10.7 13 15.2 5.7 15c-.5 0 .1 0-.5 0-.4 0-4.4-.4-5.1-1.9 2.4.2 4.1-.4 4.9-1.1-1-.3-2.9-.5-3.2-3 .4.1.6.2 1.3.1C1.9 8.3.4 7.6.5 5.3c.3.3 1.1.5 1.5.5-.8-.2-2.1-3.4-1-4.9 2 1.9 3.9 3.6 7.6 3.8.1-2.4 1.2-3.9 3-4.5z" fill="#fff"/>
               </svg>
 
@@ -196,7 +197,7 @@
           <li class="social__item">
             <a class="social__link" href="#">
 
-              <svg width="9" height="19">
+              <svg width="9" height="19" viewBox="0 0 9 19">
                 <path d="M6.5 3.4H9V0H6C2.8.2 1.6 2.4 2 6.1H0v3.5h2.1v9.3H6V9.6h3V6.1H6c0-1 0-2.4.5-2.7z"/>
               </svg>
 
@@ -206,7 +207,7 @@
           <li class="social__item">
             <a class="social__link" href="#">
 
-              <svg width="20" height="14">
+              <svg width="20" height="14" viewBox="0 0 20 14">
                 <path d="M17.2 0H2.8C1.3 0 0 1.3 0 2.8v8.3C0 12.7 1.3 14 2.8 14h14.4c1.6 0 2.8-1.3 2.8-2.8V2.8c.1-1.5-1.2-2.8-2.8-2.8zM7 10.4V3.6L13.9 7 7 10.4z"/>
               </svg>
 
@@ -220,7 +221,7 @@
           </p>
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
 
-            <svg class="copyright__logo-image" width="27" height="34">
+            <svg class="copyright__logo-image" width="27" height="34" viewBox="0 0 27 34">
               <title>HtmlAcademy</title>
               <path d="M13.62.017L13.472 0 0 1.412v24.66L13.473 34.1l13.472-8.015V1.412L13.62.017zm11.4 12.1L13.495 5.334l-.001-.104-.087.05-.088-.056v.11L1.925 12.118v-8.97l11.548-1.212L25.02 3.147v8.98zm-11.614-5.34L24.923 13.5l-4.48 2.64-7.093-4.22-.014 1.415 5.904 3.513-.86.507-5.03-2.992-.014 1.415 3.827 2.275-.782.523-3.03-1.787-.014 1.413 1.853 1.09-1.8 1.08-11.356-6.75 11.37-6.835zm-11.48 8.34l11.41 6.79.016 1.044L5.4 18.234l-.015 1.416 7.98 4.795.018 1.076-7.973-4.74-.013 1.414 8.067 4.847 8.143-4.872-.01-5.177 3.415-2.036v10.02L13.472 31.85 1.925 24.98v-9.852z"/>
             </svg>
@@ -230,7 +231,7 @@
       </div>
     </footer>
   </div>
-  <script src="js/picturefill.min.js"></script>
+  <script src="/js/picturefill.min.js"></script>
   <script>
     var navMain = document.querySelector(".main-nav");
     var menuBtn = document.querySelector(".main-nav__menu-btn");
