--- a/source/feedback.html
+++ b/source/feedback.html
@@ -13,6 +13,23 @@
 </head>
 
 <body>
+  <svg style="display: none;">
+    <symbol id="logo-academy" viewBox="0 0 27 34">
+      <path d="M13.62.017L13.472 0 0 1.412v24.66L13.473 34.1l13.472-8.015V1.412L13.62.017zm11.4 12.1L13.495 5.334l-.001-.104-.087.05-.088-.056v.11L1.925 12.118v-8.97l11.548-1.212L25.02 3.147v8.98zm-11.614-5.34L24.923 13.5l-4.48 2.64-7.093-4.22-.014 1.415 5.904 3.513-.86.507-5.03-2.992-.014 1.415 3.827 2.275-.782.523-3.03-1.787-.014 1.413 1.853 1.09-1.8 1.08-11.356-6.75 11.37-6.835zm-11.48 8.34l11.41 6.79.016 1.044L5.4 18.234l-.015 1.416 7.98 4.795.018 1.076-7.973-4.74-.013 1.414 8.067 4.847 8.143-4.872-.01-5.177 3.415-2.036v10.02L13.472 31.85 1.925 24.98v-9.852z"/>
+    </symbol>
+    <symbol id="icon-twitter" viewBox="0 0 18 15">
+      <path d="M11.6.2c1.7-.5 3.2.2 3.8 1.1l2.2-.7c0 .8-.5 1.5-.9 1.7.7.2 1.3-.5 1.3-.5-.2 1-1 1.7-1.6 2.1C16.1 10.7 13 15.2 5.7 15c-.5 0 .1 0-.5 0-.4 0-4.4-.4-5.1-1.9 2.4.2 4.1-.4 4.9-1.1-1-.3-2.9-.5-3.2-3 .4.1.6.2 1.3.1C1.9 8.3.4 7.6.5 5.3c.3.3 1.1.5 1.5.5-.8-.2-2.1-3.4-1-4.9 2 1.9 3.9 3.6 7.6 3.8.1-2.4 1.2-3.9 3-4.5z"/>
+    </symbol>
+    <symbol id="icon-facebook" viewBox="0 0 9 19">
+      <path d="M6.5 3.4H9V0H6C2.8.2 1.6 2.4 2 6.1H0v3.5h2.1v9.3H6V9.6h3V6.1H6c0-1 0-2.4.5-2.7z"/>
+    </symbol>
+    <symbol id="icon-youtube" viewBox="0 0 20 14">
+      <path d="M17.2 0H2.8C1.3 0 0 1.3 0 2.8v8.3C0 12.7 1.3 14 2.8 14h14.4c1.6 0 2.8-1.3 2.8-2.8V2.8c.1-1.5-1.2-2.8-2.8-2.8zM7 10.4V3.6L13.9 7 7 10.4z"/>
+    </symbol>
+    <symbol id="like-btn" viewBox="0 0 22 20">
+      <path d="M12.383 3.646L11.22 9h8.68v2 .058L17 18H8V8.03l.014-.015 4.37-4.368M2 10v8-8M13.2 0L6.6 6.6c-.4.3-.6.8-.6 1.4v10c0 1.1.9 2 2 2h9c.8 0 1.5-.5 1.8-1.2l3-7.1c.1-.2.1-.5.1-.7V9h.1c0-1.1-.9-2-2-2h-6.3l1-4.6v-.3c0-.4-.2-.8-.4-1.1l-1.1-1zM4 8H0v12h4V8zm18 1v.044V9z"/>
+    </symbol>
+  </svg>
   <div class="page-wrapper">
     <header class="page-header">
       <div class="page-header__wrapper">
@@ -73,33 +90,30 @@
         <p class="page-footer__hashtag">#VisitSedona</p>
         <ul class="page-footer__social social">
           <li class="social__item">
-            <a class="social__link" href="#">
-
-              <svg width="18" height="15" viewBox="0 0 18 15">
-                <path d="M11.6.2c1.7-.5 3.2.2 3.8 1.1l2.2-.7c0 .8-.5 1.5-.9 1.7.7.2 1.3-.5 1.3-.5-.2 1-1 1.7-1.6 2.1C16.1 10.7 13 15.2 5.7 15c-.5 0 .1 0-.5 0-.4 0-4.4-.4-5.1-1.9 2.4.2 4.1-.4 4.9-1.1-1-.3-2.9-.5-3.2-3 .4.1.6.2 1.3.1C1.9 8.3.4 7.6.5 5.3c.3.3 1.1.5 1.5.5-.8-.2-2.1-3.4-1-4.9 2 1.9 3.9 3.6 7.6 3.8.1-2.4 1.2-3.9 3-4.5z" fill="#fff"/>
+            <a class="social__link" href="#" title="Наш Twitter">
+              <span class="visually-hidden">Наша страница в Twitter</span>
+              <svg width="18" height="15">
+                <title>Twitter</title>
+                <use xlink:href="#icon-twitter"></use>
               </svg>
-
-              <span class="visually-hidden">Мы в Твиттере</span>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link" href="#">
-
-              <svg width="9" height="19" viewBox="0 0 9 19">
-                <path d="M6.5 3.4H9V0H6C2.8.2 1.6 2.4 2 6.1H0v3.5h2.1v9.3H6V9.6h3V6.1H6c0-1 0-2.4.5-2.7z"/>
+            <a class="social__link" href="#" title="Наш Facebook">
+              <span class="visually-hidden">Наша группа в Facebook</span>
+              <svg width="9" height="19">
+                <title>Facebook</title>
+                <use xlink:href="#icon-facebook"></use>
               </svg>
-
-              <span class="visually-hidden">Мы в Фейсбуке</span>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link" href="#">
-
-              <svg width="20" height="14" viewBox="0 0 20 14">
-                <path d="M17.2 0H2.8C1.3 0 0 1.3 0 2.8v8.3C0 12.7 1.3 14 2.8 14h14.4c1.6 0 2.8-1.3 2.8-2.8V2.8c.1-1.5-1.2-2.8-2.8-2.8zM7 10.4V3.6L13.9 7 7 10.4z"/>
+            <a class="social__link" href="#" title="Наш канал на YouTube">
+              <span class="visually-hidden">Наш канал на YouTube</span>
+              <svg width="20" height="14">
+                <title>YouTube</title>
+                <use xlink:href="#icon-youtube"></use>
               </svg>
-
-              <span class="visually-hidden">Мы на Ютьюбе</span>
             </a>
           </li>
         </ul>
@@ -108,12 +122,10 @@
             Разработано
           </p>
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-
-            <svg class="copyright__logo-image" width="27" height="34" viewBox="0 0 27 34">
+            <svg class="copyright__logo-image" width="27" height="34">
               <title>HtmlAcademy</title>
-              <path d="M13.62.017L13.472 0 0 1.412v24.66L13.473 34.1l13.472-8.015V1.412L13.62.017zm11.4 12.1L13.495 5.334l-.001-.104-.087.05-.088-.056v.11L1.925 12.118v-8.97l11.548-1.212L25.02 3.147v8.98zm-11.614-5.34L24.923 13.5l-4.48 2.64-7.093-4.22-.014 1.415 5.904 3.513-.86.507-5.03-2.992-.014 1.415 3.827 2.275-.782.523-3.03-1.787-.014 1.413 1.853 1.09-1.8 1.08-11.356-6.75 11.37-6.835zm-11.48 8.34l11.41 6.79.016 1.044L5.4 18.234l-.015 1.416 7.98 4.795.018 1.076-7.973-4.74-.013 1.414 8.067 4.847 8.143-4.872-.01-5.177 3.415-2.036v10.02L13.472 31.85 1.925 24.98v-9.852z"/>
+              <use xlink:href="#logo-academy"></use>
             </svg>
-
           </a>
         </div>
       </div>
