--- a/source/photo-and-video.html
+++ b/source/photo-and-video.html
@@ -88,7 +88,7 @@
                 <picture>
                   <source type="image/webp" media="(min-width: 1200px)" srcset="/img/photo-sunset-desktop@1x.webp 1x, /img/photo-sunset-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="/img/photo-sunset-tablet@1x.webp 1x, /img/photo-sunset-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="/img/photo-sunset-tablet@1x.webp 1x, /img/photo-sunset-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="/img/photo-sunset-mobile@1x.webp 1x, /img/photo-sunset-mobile@2x.webp 2x">
 
                   <source media="(min-width: 1200px)" srcset="/img/photo-sunset-desktop@1x.jpg 1x, /img/photo-sunset-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="/img/photo-sunset-tablet@1x.jpg 1x, /img/photo-sunset-tablet@2x.jpg 2x">
@@ -114,7 +114,7 @@
                 <picture>
                   <source type="image/webp" media="(min-width: 1200px)" srcset="/img/photo-cactus-desktop@1x.webp 1x, /img/photo-cactus-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="/img/photo-cactus-tablet@1x.webp 1x, /img/photo-cactus-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="/img/photo-cactus-tablet@1x.webp 1x, /img/photo-cactus-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="/img/photo-cactus-mobile@1x.webp 1x, /img/photo-cactus-mobile@2x.webp 2x">
 
                   <source media="(min-width: 1200px)" srcset="/img/photo-cactus-desktop@1x.jpg 1x, /img/photo-cactus-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="/img/photo-cactus-tablet@1x.jpg 1x, /img/photo-cactus-tablet@2x.jpg 2x">
@@ -140,7 +140,7 @@
                 <picture>
                   <source type="image/webp" media="(min-width: 1200px)" srcset="/img/photo-roads-desktop@1x.webp 1x, /img/photo-roads-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="/img/photo-roads-tablet@1x.webp 1x, /img/photo-roads-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="/img/photo-roads-tablet@1x.webp 1x, /img/photo-roads-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="/img/photo-roads-mobile@1x.webp 1x, /img/photo-roads-mobile@2x.webp 2x">
 
                   <source media="(min-width: 1200px)" srcset="/img/photo-roads-desktop@1x.jpg 1x, /img/photo-roads-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="/img/photo-roads-tablet@1x.jpg 1x, /img/photo-roads-tablet@2x.jpg 2x">
@@ -166,7 +166,7 @@
                 <picture>
                   <source type="image/webp" media="(min-width: 1200px)" srcset="/img/photo-bridge-desktop@1x.webp 1x, /img/photo-bridge-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="/img/photo-bridge-tablet@1x.webp 1x, /img/photo-bridge-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="/img/photo-bridge-tablet@1x.webp 1x, /img/photo-bridge-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="/img/photo-bridge-mobile@1x.webp 1x, /img/photo-bridge-mobile@2x.webp 2x">
 
                   <source media="(min-width: 1200px)" srcset="/img/photo-bridge-desktop@1x.jpg 1x, /img/photo-bridge-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="/img/photo-bridge-tablet@1x.jpg 1x, /img/photo-bridge-tablet@2x.jpg 2x">
