Исправляет подключение планшетных webp вместо мобильных на главной странице

--- a/source/index.html
+++ b/source/index.html
@@ -99,7 +99,7 @@
                 <picture class="features__image">
                   <source type="image/webp" media="(min-width: 1200px)" srcset="/img/main-city-desktop@1x.webp 1x, /img/main-city-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="/img/main-city-tablet@1x.webp 1x, /img/main-city-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="/img/main-city-tablet@1x.webp 1x, /img/main-city-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="/img/main-city-mobile@1x.webp 1x, /img/main-city-mobile@2x.webp 2x">
 
                   <source media="(min-width: 1200px)" srcset="/img/main-city-desktop@1x.jpg 1x, /img/main-city-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="/img/main-city-tablet@1x.jpg 1x, /img/main-city-tablet@2x.jpg 2x">
@@ -141,7 +141,7 @@
                 <picture class="features__image">
                   <source type="image/webp" media="(min-width: 1200px)" srcset="/img/main-bridge-desktop@1x.webp 1x, /img/main-bridge-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="/img/main-bridge-tablet@1x.webp 1x, /img/main-bridge-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="/img/main-bridge-tablet@1x.webp 1x, /img/main-bridge-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="/img/main-bridge-mobile@1x.webp 1x, /img/main-bridge-mobile@2x.webp 2x">
 
                   <source media="(min-width: 1200px)" srcset="/img/main-bridge-desktop@1x.jpg 1x, /img/main-bridge-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="/img/main-bridge-tablet@1x.jpg 1x, /img/main-bridge-tablet@2x.jpg 2x">
@@ -198,7 +198,7 @@
           <picture>
             <source type="image/webp" media="(min-width: 1200px)" srcset="/img/bg-map-desktop@1x.webp 1x, /img/bg-map-desktop@2x.webp 2x">
             <source type="image/webp" media="(min-width: 768px)" srcset="/img/bg-map-tablet@1x.webp 1x, /img/bg-map-tablet@2x.webp 2x">
-            <source type="image/webp" srcset="/img/bg-map-tablet@1x.webp 1x, /img/bg-map-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="/img/bg-map-mobile@1x.webp 1x, /img/bg-map-mobile@2x.webp 2x">
 
             <source media="(min-width: 1200px)" srcset="/img/bg-map-desktop@1x.jpg 1x, /img/bg-map-desktop@2x.jpg 2x">
             <source media="(min-width: 768px)" srcset="/img/bg-map-tablet@1x.jpg 1x, /img/bg-map-tablet@2x.jpg 2x">
