Изменяет размеры и отступы элементов страницы форм
Устанавливает размерности близкие к макетным
Добавляет иконки телефона и почты в соответствующие формы

--- a/source/feedback.html
+++ b/source/feedback.html
@@ -90,11 +90,11 @@
           <div class="feedback__form-wrapper feedback__form-wrapper--contacts">
             <div class="feedback__fields">
               <h3 class="feedback__field-title">Контактная информация:</h3>
-              <p class="feedback__input-field input-field">
+              <p class="feedback__input-field input-field input-field--tel">
                 <label class="input-field__label input-field__label--atop" for="tel"><span>Контактный</span> телефон*:</label>
                 <input class="input-field__string" id="tel" type="tel" name="Telephone number" placeholder="Введите телефон">
               </p>
-              <p class="feedback__input-field input-field">
+              <p class="feedback__input-field input-field input-field--email">
                 <label class="input-field__label input-field__label--atop" for="email">Электронная почта*:</label>
                 <input class="input-field__string" id="email" type="email" name="Telephone number" placeholder="Введите e-mail">
               </p>
@@ -136,7 +136,7 @@
               </p>
             </div>
           </div>
-          <button class="feedback__submit-btn button" type="submit">Отправить отзыв</button>
+          <p class="feedback__submit-wrapper"><button class="feedback__submit-btn button" type="submit">Отправить отзыв</button><span>* — обязательные поля</span></p>
         </form>
       </section>
 
