--- a/source/feedback.html
+++ b/source/feedback.html
@@ -92,11 +92,11 @@
               <h3 class="feedback__field-title">Контактная информация:</h3>
               <p class="feedback__input-field input-field input-field--tel">
                 <label class="input-field__label input-field__label--atop" for="tel"><span>Контактный</span> телефон*:</label>
-                <input class="input-field__string" id="tel" type="tel" name="Telephone number" placeholder="Введите телефон">
+                <input class="input-field__string" id="tel" type="tel" name="Telephone" placeholder="Введите телефон">
               </p>
               <p class="feedback__input-field input-field input-field--email">
                 <label class="input-field__label input-field__label--atop" for="email">Электронная почта*:</label>
-                <input class="input-field__string" id="email" type="email" name="Telephone number" placeholder="Введите e-mail">
+                <input class="input-field__string" id="email" type="email" name="Email" placeholder="Введите e-mail">
               </p>
             </div>
           </div>
@@ -141,6 +141,22 @@
       </section>
 
     </main>
+
+    <section class="modal modal--success">
+      <div class="modal__mesage-wrapper">
+        <h2 class="modal__title">Ваш отзыв отправлен!</h2>
+        <p class="modal__message-text">Спасибо за ваше участие, ваш отзыв уже поступил к нам.<br>В ближайшее время мы опубликуем его на сайте.</p>
+      </div>
+      <p class="modal__btn-wrapper"><button class="button modal-close" type="button">Закрыть окно</button></p>
+    </section>
+
+    <section class="modal modal--failure">
+      <div class="modal__mesage-wrapper">
+        <h2 class="modal__title">Что-то пошло<span>&nbsp;</span><br>не так!</h2>
+        <p class="modal__message-text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+      </div>
+      <p class="modal__btn-wrapper"><button class="button modal-close" type="button">OK</button></p>
+    </section>
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
