Исправляет мелкие ошибки разметки и стилей

--- a/source/photo-and-video.html
+++ b/source/photo-and-video.html
@@ -6,8 +6,8 @@
   <title>Седона — Фото и Видео</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="/css/style.min.css">
-  <link rel="spanload" href="/fonts/ptsans.woff2" as="font">
-  <link rel="spanload" href="/fonts/ptsansbold.woff2" as="font">
+  <link rel="onload" href="/fonts/ptsans.woff2" as="font">
+  <link rel="onload" href="/fonts/ptsansbold.woff2" as="font">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
