--- a/source/feedback.html
+++ b/source/feedback.html
@@ -6,8 +6,8 @@
   <title>Седона — Форма отзыва</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="/css/style.min.css">
-  <link rel="spanload" href="/fonts/ptsans.woff2" as="font">
-  <link rel="spanload" href="/fonts/ptsansbold.woff2" as="font">
+  <link rel="onload" href="/fonts/ptsans.woff2" as="font">
+  <link rel="onload" href="/fonts/ptsansbold.woff2" as="font">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -69,7 +69,7 @@
 
       <section class="feedback">
         <h2 class="visually-hidden">Форма отзыва</h2>
-        <form class="feedback__form" method="GET" action="https://echo.htmlacademy.ru">
+        <form class="feedback__form" method="POST" action="https://echo.htmlacademy.ru">
           <div class="feedback__form-wrapper feedback__form-wrapper--user-info">
             <div class="feedback__fields">
               <h3 class="feedback__field-title">Представьтесь:</h3>
@@ -93,10 +93,20 @@
               <p class="feedback__input-field input-field input-field--tel">
                 <label class="input-field__label input-field__label--atop" for="tel"><span>Контактный</span> телефон*:</label>
                 <input class="input-field__string" id="tel" type="tel" name="Telephone" placeholder="Введите телефон">
+                <span class="input-field__icon">
+                  <svg width="18" height="18">
+                    <use xlink:href="#icon-phone"></use>
+                  </svg>
+                </span>
               </p>
               <p class="feedback__input-field input-field input-field--email">
                 <label class="input-field__label input-field__label--atop" for="email">Электронная почта*:</label>
                 <input class="input-field__string" id="email" type="email" name="Email" placeholder="Введите e-mail">
+                <span class="input-field__icon">
+                  <svg width="16" height="16">
+                    <use xlink:href="#icon-mail"></use>
+                  </svg>
+                </span>
               </p>
             </div>
           </div>
