Исправляет доступность мобильной кнопки меню

--- a/source/feedback.html
+++ b/source/feedback.html
@@ -30,8 +30,8 @@
         </a>
         <nav class="main-nav main-nav--closed main-nav--nojs">
           <button class="main-nav__menu-btn" type="button">
-            <span class="main-nav__menu-closed visually-hidden">Открыть меню</span>
-            <span class="main-nav__menu-opened visually-hidden">Закрыть меню</span>
+            <span class="a11y-menu-btn visually-hidden">Открыть меню</span>
+            <span class="a11y-menu-btn visually-hidden">Закрыть меню</span>
           </button>
           <div class="main-nav__wrapper">
             <ul class="main-nav__list site-list">
