Выравнивает элементы страниц по макету

--- a/source/feedback.html
+++ b/source/feedback.html
@@ -162,7 +162,7 @@
               </p>
             </div>
           </div>
-          <p class="feedback__submit-wrapper"><button class="feedback__submit-btn button" type="submit">Отправить отзыв</button><span>* — обязательные поля</span></p>
+          <p class="feedback__submit-wrapper"><button class="feedback__submit-btn button" type="submit">Отправить отзыв</button><span>* – обязательные поля</span></p>
         </form>
       </section>
 
