--- a/source/index.html
+++ b/source/index.html
@@ -61,10 +61,10 @@
             <img class="page-cover__logo" src="/img/text-sedona-index.svg" width="282" height="214" alt="SEDONA">
           </div>
           <h1 class="page-cover__title">
-            Седона — небольшой городок в Аризоне, заслуживающий большего!
+            Седона – небольшой городок в Аризоне, заслуживающий большего!
           </h1>
           <p class="page-cover__description page-cover__description--main-page">
-            Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!
+            Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!
           </p>
         </div>
       </section>
@@ -78,7 +78,7 @@
                 <div class="features__tile features__tile--top-feature">
                   <h3 class="features__title features__title--top-feature">Настоящий<span>&nbsp;</span><br>городок</h3>
                   <p class="features__number">
-                    — №1 —
+                    – №1 –
                   </p>
                   <p class="features__description">
                     Седона не аттракцион для туристов, там течет своя жизнь
@@ -120,10 +120,10 @@
                 <div class="features__tile features__tile--top-feature">
                   <h3 class="features__title features__title--top-feature">Там есть<span>&nbsp;</span><br>Мост Дьявола</h3>
                   <p class="features__number">
-                    — №2 —
+                    – №2 –
                   </p>
                   <p class="features__description">
-                    Да, по нему можно пройти! Если вы осмелитесь, конечно
+                    Да, по нему можно пройти!<span>&nbsp;</span><br>Если вы осмелитесь, конечно
                   </p>
                 </div>
                 <picture class="features__image">
@@ -140,7 +140,7 @@
             <li class="features__item features__item--additional">
               <h3 class="features__title features__title--additional">Небольшая<span>&nbsp;</span><br>площадь</h3>
               <p class="features__number">
-                — №3 —
+                – №3 –
               </p>
               <p class="features__description">
                 Все интересные места находятся очень близко
@@ -149,7 +149,7 @@
             <li class="features__item features__item--additional">
               <h3 class="features__title features__title--additional">Красивая<span>&nbsp;</span><br>дорога</h3>
               <p class="features__number">
-                — №4 —
+                – №4 –
               </p>
               <p class="features__description">
                 Ехать в Седону из Лас&#8209;Вегаса совсем не&nbsp;скучно!
@@ -158,7 +158,7 @@
             <li class="features__item features__item--additional">
               <h3 class="features__title features__title--additional">Мало<span>&nbsp;</span><br>туристов</h3>
               <p class="features__number">
-                — №5 —
+                – №5 –
               </p>
               <p class="features__description">
                 Большинство едет в Гранд&nbsp;Каньон и толпится там
@@ -171,11 +171,11 @@
       <section class="find-hotel">
         <div class="find-hotel__wrapper">
           <h2 class="visually-hidden">Поиск гостинцы</h2>
-          <h3 class="main-question">Заинтересовались?</h3>
-          <p class="main-offer">
+          <h3 class="find-hotel__question main-question">Заинтересовались?</h3>
+          <p class="find-hotel__offer main-offer">
             Укажите предполагаемые даты поездки,<span>&nbsp;</span><br>и мы покажем вам лучшие предложения гостиниц в седоне
           </p>
-          <a class="find-hotel__btn button" href="#">Найти гостиницу</a>
+          <a class="find-hotel__btn button" href="/hotel.html">Найти гостиницу</a>
         </div>
       </section>
       <section class="location">
